# dnet-tui

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json
.github/workflows/: ci.yml
src/: app.rs  chat.rs  config.rs  constants.rs  developer.rs  lib.rs  main.rs  menu.rs  model.rs  settings.rs  shard.rs  topology.rs  utils.rs
src/common/: api.rs  devices.rs  mod.rs  models.rs  shard.rs  topology.rs
src/views/: chat.rs  devices.rs  menu.rs  mod.rs  settings.rs  topology.rs
src/views/chat/: mod.rs  styles.rs  utils.rs
src/views/developer/: manual.rs  menu.rs  mod.rs  utils.rs
src/views/model/: load.rs  mod.rs  unload.rs
src/views/topology/: mod.rs  ring.rs  shard.rs
src/widgets/: model_selector.rs
src/wigets/: mod.rs  model_selector.rs
tests/: test_chat.rs  test_model_selector.rs
