[package]
name = "dnet-tui"
version = "0.1.0"
description = "Dnet distributed inference TUI"
authors = ["erhant <erhan@dria.co>"]
license = "MIT"
edition = "2024"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
ratatui = "0.29.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
