[package]
name = "dnet-tui"
version = "0.1.1"
description = "Dnet distributed inference TUI"
authors = ["erhant <erhan@dria.co>"]
license = "APACHE-2.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
chrono = "0.4"
color-eyre = "0.6.3"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-input = { version = "0.14.0", default-features = false, features = [
  "crossterm",
] }
